--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+
 #      # Install the cosign tool except on PR
 #      # https://github.com/sigstore/cosign-installer
 #      - name: Install cosign
