--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ on:
 env:
   REGISTRY: docker.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: ks89/${{ github.repository.name }}
+  IMAGE_NAME: ks89/${{ github.event.repository.name }}
 
 jobs:
   build:
@@ -36,7 +36,9 @@ jobs:
 
       - name: Dump GitHub context
         id: github_context_step
-        run: echo '${{ toJSON(github) }}'
+        run: |
+          echo '${{ toJSON(github) }}'
+          ${{ github.event.repository.name }}
 
 #      # Install the cosign tool except on PR
 #      # https://github.com/sigstore/cosign-installer
