feat: support build:dev and build:prod profiles
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/package.json
+++ b/package.json
@@ -4,39 +4,47 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "build": "npm run build:dev",
+    "build:dev": "npm run clean && nx build --mode development && npm run clean:dest && npm run copy",
+    "build:prod": "npm run clean:dist && nx build",
+    "clean": "npm run clean:dist && npm run clean:dest",
+    "clean:dist": "rm -rf dist",
+    "clean:dest": "rm -rf ../api-server/public",
+    "copy": "cpr dist/home-anthill/ ../api-server/public/",
+    "test": "nx test",
+    "deps": "nx migrate latest"
   },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@reduxjs/toolkit": "^1.9.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.40.0",
+    "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.5"
+    "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "15.3.3",
-    "@nrwl/linter": "15.3.3",
-    "@nrwl/react": "15.3.3",
-    "@nrwl/vite": "15.3.3",
-    "@nrwl/workspace": "15.3.3",
+    "@nrwl/eslint-plugin-nx": "15.5.0",
+    "@nrwl/linter": "15.5.0",
+    "@nrwl/react": "15.5.0",
+    "@nrwl/vite": "15.5.0",
+    "@nrwl/workspace": "15.5.0",
     "@testing-library/react": "13.4.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react": "^2.2.0",
-    "@vitest/coverage-c8": "~0.25.3",
-    "@vitest/ui": "^0.9.3",
+    "@vitejs/plugin-react": "3.0.1",
+    "@vitest/coverage-c8": "0.25.8",
+    "@vitest/ui": "0.25.8",
+    "cpr": "^3.0.1",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.26.0",
@@ -44,15 +52,16 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~20.0.3",
-    "nx": "15.3.3",
+    "nx": "15.5.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "^1.55.0",
     "typescript": "~4.8.2",
-    "vite": "^3.0.5",
-    "vite-plugin-dts": "~1.7.1",
-    "vite-plugin-eslint": "^1.6.0",
-    "vite-tsconfig-paths": "^4.0.1",
-    "vitest": "^0.25.1"
+    "vite": "4.0.4",
+    "vite-plugin-dts": "1.7.1",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-tsconfig-paths": "4.0.3",
+    "vitest": "0.25.8"
   }
 }
+
