--- a/package.json
+++ b/package.json
@@ -16,52 +16,50 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
-    "@reduxjs/toolkit": "^1.9.1",
+    "@reduxjs/toolkit": "1.9.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "6.11.2"
   },
   "devDependencies": {
-    "@nrwl/eslint-plugin-nx": "15.5.0",
-    "@nrwl/linter": "15.5.0",
-    "@nrwl/react": "15.5.0",
-    "@nrwl/vite": "15.5.0",
-    "@nrwl/workspace": "15.5.0",
-    "@testing-library/react": "13.4.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react": "3.0.1",
-    "@vitest/coverage-c8": "0.25.8",
-    "@vitest/ui": "0.25.8",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/react": "17.1.3",
+    "@nx/vite": "17.1.3",
+    "@nx/workspace": "17.1.3",
+    "@testing-library/react": "14.0.0",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
+    "@vitejs/plugin-react": "4.2.0",
+    "@vitest/coverage-c8": "0.31.4",
+    "@vitest/ui": "0.31.4",
     "cpr": "^3.0.1",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.1",
-    "eslint-plugin-react": "7.31.11",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jsdom": "~20.0.3",
-    "nx": "15.5.0",
+    "jsdom": "22.1.0",
+    "nx": "17.1.3",
     "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
     "sass": "^1.55.0",
-    "typescript": "~4.8.2",
-    "vite": "4.0.4",
-    "vite-plugin-dts": "1.7.1",
+    "typescript": "5.2.2",
+    "vite": "4.5.0",
+    "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "1.8.1",
-    "vite-tsconfig-paths": "4.0.3",
-    "vitest": "0.25.8"
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.31.4"
   }
 }
-
