--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "npm run build:dev",
-    "build:dev": "npm run clean && nx build --mode development && npm run clean:dest && npm run copy",
+    "build:dev": "npm run clean && nx build --configuration=development && npm run clean:dest && npm run copy",
     "build:prod": "npm run clean:dist && nx build",
     "clean": "npm run clean:dist && npm run clean:dest",
     "clean:dist": "rm -rf dist",
@@ -18,48 +18,48 @@
   "dependencies": {
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.4",
-    "@reduxjs/toolkit": "1.9.3",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.42.0",
-    "react-icons": "^4.7.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "6.11.2"
+    "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
+    "@nx/js": "17.1.3",
     "@nx/react": "17.1.3",
     "@nx/vite": "17.1.3",
     "@nx/workspace": "17.1.3",
     "@testing-library/react": "14.0.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
-    "@vitejs/plugin-react": "4.2.0",
-    "@vitest/coverage-c8": "0.31.4",
-    "@vitest/ui": "0.31.4",
+    "@types/node": "^20.10.2",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "@vitejs/plugin-react": "~4.0.0",
+    "@vitest/coverage-v8": "~0.34.6",
+    "@vitest/ui": "~0.34.6",
     "cpr": "^3.0.1",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "~8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jsdom": "22.1.0",
+    "jsdom": "~22.1.0",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
     "sass": "^1.55.0",
-    "typescript": "5.2.2",
-    "vite": "4.5.0",
-    "vite-plugin-dts": "2.3.0",
-    "vite-plugin-eslint": "1.8.1",
-    "vite-tsconfig-paths": "4.2.1",
-    "vitest": "0.31.4"
+    "typescript": "~5.2.2",
+    "vite": "~4.3.9",
+    "vitest": "~0.34.6"
   }
 }
+
