--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,13 +5,10 @@
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
-      "@nx/react/typings/image.d.ts"
+      "@nx/react/typings/image.d.ts",
+      "vite/client"
     ]
   },
-  "files": [
-    "./node_modules/@nx/react/typings/cssmodule.d.ts",
-    "./node_modules/@nx/react/typings/image.d.ts"
-  ],
   "exclude": [
     "src/**/*.spec.ts",
     "src/**/*.test.ts",
