--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,7 +4,10 @@
     "outDir": "../../dist/out-tsc",
     "types": [
       "vitest/globals",
+      "vitest/importMeta",
+      "vite/client",
       "node",
+      "vitest",
       "@nx/react/typings/cssmodule.d.ts",
       "@nx/react/typings/image.d.ts"
     ]
@@ -20,9 +23,5 @@
     "src/**/*.test.jsx",
     "src/**/*.spec.jsx",
     "src/**/*.d.ts"
-  ],
-  "files": [
-    "./node_modules/@nx/react/typings/cssmodule.d.ts",
-    "./node_modules/@nx/react/typings/image.d.ts"
   ]
 }
