--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.9",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^1.9.7",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -37,7 +37,7 @@
     "@nx/vite": "17.1.3",
     "@nx/workspace": "17.1.3",
     "@testing-library/react": "14.0.0",
-    "@types/node": "^20.10.2",
+    "@types/node": "^20.12.12",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -56,10 +56,9 @@
     "jsdom": "~22.1.0",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
-    "sass": "^1.55.0",
+    "sass": "^1.77.2",
     "typescript": "~5.2.2",
     "vite": "~4.3.9",
     "vitest": "~0.34.6"
   }
 }
-
