--- a/package.json
+++ b/package.json
@@ -22,31 +22,38 @@
     "@mui/material": "^5.15.18",
     "@reduxjs/toolkit": "^1.9.7",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
-    "@nx/eslint": "17.1.3",
-    "@nx/eslint-plugin": "17.1.3",
-    "@nx/js": "17.1.3",
-    "@nx/react": "17.1.3",
-    "@nx/vite": "17.1.3",
-    "@nx/workspace": "17.1.3",
-    "@testing-library/react": "14.0.0",
-    "@types/node": "^20.12.12",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "@vitejs/plugin-react": "~4.0.0",
-    "@vitest/coverage-v8": "~0.34.6",
-    "@vitest/ui": "~0.34.6",
+    "@nx/cypress": "19.0.4",
+    "@nx/eslint": "19.0.4",
+    "@nx/eslint-plugin": "19.0.4",
+    "@nx/js": "19.0.4",
+    "@nx/react": "19.0.4",
+    "@nx/vite": "19.0.4",
+    "@nx/web": "19.0.4",
+    "@nx/workspace": "19.0.4",
+    "@swc-node/register": "~1.8.0",
+    "@swc/cli": "~0.3.12",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@testing-library/react": "15.0.6",
+    "@types/node": "18.16.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
     "cpr": "^3.0.1",
-    "eslint": "~8.46.0",
+    "cypress": "^13.6.6",
+    "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
@@ -54,11 +61,12 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
-    "nx": "17.1.3",
+    "nx": "19.0.4",
     "prettier": "^2.6.2",
-    "sass": "^1.77.2",
-    "typescript": "~5.2.2",
-    "vite": "~4.3.9",
-    "vitest": "~0.34.6"
+    "sass": "^1.55.0",
+    "typescript": "~5.4.2",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1"
   }
 }
+
