--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0",
+    "react-icons": "^5.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1"
   },
@@ -38,12 +38,12 @@
     "@nx/vite": "19.0.4",
     "@nx/web": "19.0.4",
     "@nx/workspace": "19.0.4",
-    "@swc-node/register": "~1.8.0",
+    "@swc-node/register": "^1.9.1",
     "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
+    "@swc/core": "^1.5.7",
+    "@swc/helpers": "^0.5.11",
     "@testing-library/react": "15.0.6",
-    "@types/node": "18.16.9",
+    "@types/node": "^20.12.12",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
@@ -62,11 +62,10 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jsdom": "~22.1.0",
     "nx": "19.0.4",
-    "prettier": "^2.6.2",
+    "prettier": "^3.2.5",
     "sass": "^1.55.0",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
   }
 }
-
