chore: upgrade nx project
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/project.json
+++ b/project.json
@@ -52,7 +52,8 @@
         "production": {
           "buildTarget": "home-anthill:build:production"
         }
-      }
+      },
+      "dependsOn": ["build"]
     },
     "test": {
       "executor": "@nx/vite:test",
