--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
     "@reduxjs/toolkit": "^2.2.5",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
@@ -31,41 +31,41 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@nx/cypress": "19.0.4",
-    "@nx/eslint": "19.0.4",
-    "@nx/eslint-plugin": "^19.0.4",
-    "@nx/js": "19.0.4",
-    "@nx/react": "19.0.4",
-    "@nx/vite": "19.0.4",
-    "@nx/web": "19.0.4",
-    "@nx/workspace": "19.0.4",
-    "@swc-node/register": "^1.9.1",
+    "@nx/cypress": "20.3.0",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/js": "20.3.0",
+    "@nx/react": "20.3.0",
+    "@nx/vite": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/workspace": "20.3.0",
+    "@swc-node/register": "1.9.2",
     "@swc/cli": "~0.3.12",
-    "@swc/core": "^1.5.7",
-    "@swc/helpers": "^0.5.11",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.15",
     "@testing-library/react": "15.0.6",
     "@types/node": "^20.12.12",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "cpr": "^3.0.1",
-    "cypress": "^13.6.6",
+    "cypress": "13.17.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jsdom": "~22.1.0",
-    "nx": "19.0.4",
-    "prettier": "^3.2.5",
+    "nx": "20.3.0",
+    "prettier": "^3.4.2",
     "sass": "^1.55.0",
-    "typescript": "~5.4.2",
+    "typescript": "5.6.3",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
   }
