--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "nx": "20.3.0",
     "prettier": "^3.4.2",
     "sass": "^1.55.0",
-    "typescript": "5.6.3",
-    "vite": "~5.0.0",
+    "typescript": "=5.4.2",
+    "vite": "~5.0.13",
     "vitest": "^1.3.1"
   }
 }
