feat: upgrade nx project structure to the latest one
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/project.json
+++ b/project.json
@@ -1,6 +1,7 @@
 {
   "name": "home-anthill",
   "$schema": "node_modules/nx/schemas/project-schema.json",
+  "includedScripts": [],
   "sourceRoot": "./src",
   "projectType": "application",
   "tags": [],
