--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
+    "@mui/icons-material": "^6.4.0",
+    "@mui/material": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.5",
     "prop-types": "^15.8.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "^9.18.0",
     "@nx/devkit": "20.3.2",
     "@nx/eslint": "20.3.2",
     "@nx/eslint-plugin": "20.3.2",
@@ -42,32 +42,32 @@
     "@nx/web": "20.3.2",
     "@nx/workspace": "20.3.2",
     "@playwright/test": "^1.36.0",
-    "@swc-node/register": "~1.9.1",
+    "@swc-node/register": "^1.10.9",
     "@swc/cli": "~0.3.12",
-    "@swc/core": "~1.5.7",
+    "@swc/core": "^1.10.7",
     "@swc/helpers": "~0.5.11",
-    "@testing-library/react": "15.0.6",
-    "@types/node": "18.16.9",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "cpr": "^3.0.1",
-    "eslint": "^9.8.0",
+    "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "jsdom": "~22.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-playwright": "^2.1.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "jsdom": "^26.0.0",
     "nx": "20.3.2",
-    "prettier": "^2.6.2",
-    "sass": "^1.55.0",
+    "prettier": "^3.4.2",
+    "sass": "^1.83.4",
     "tslib": "^2.3.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
   },
