chore: update deps
Signed-off-by: Stefano Cappa <stefano.cappa.ks89@gmail.com>

--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
-    "@nx/devkit": "20.3.2",
-    "@nx/eslint": "20.3.2",
-    "@nx/eslint-plugin": "20.3.2",
-    "@nx/js": "20.3.2",
-    "@nx/playwright": "20.3.2",
-    "@nx/react": "20.3.2",
-    "@nx/vite": "20.3.2",
-    "@nx/web": "20.3.2",
-    "@nx/workspace": "20.3.2",
+    "@nx/devkit": "20.8.0",
+    "@nx/eslint": "20.8.0",
+    "@nx/eslint-plugin": "20.8.0",
+    "@nx/js": "20.8.0",
+    "@nx/playwright": "20.8.0",
+    "@nx/react": "20.8.0",
+    "@nx/vite": "20.8.0",
+    "@nx/web": "20.8.0",
+    "@nx/workspace": "20.8.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "^1.10.9",
-    "@swc/cli": "~0.3.12",
+    "@swc/cli": "0.6.0",
     "@swc/core": "^1.10.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "^16.2.0",
@@ -55,20 +55,21 @@
     "@vitest/ui": "^1.3.1",
     "cpr": "^3.0.1",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-playwright": "^2.1.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "jiti": "2.4.2",
     "jsdom": "^26.0.0",
-    "nx": "20.3.2",
+    "nx": "20.8.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
     "tslib": "^2.3.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
-    "vite": "^5.0.0",
+    "vite": "6.3.2",
     "vitest": "^1.3.1"
   },
   "nx": {
