--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.7",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
