--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "clean:dist": "rm -rf dist",
     "clean:dest": "rm -rf ../api-server/public",
     "copy": "cpr dist/ ../api-server/public/",
-    "test": "nx test",
     "deps": "nx migrate latest"
   },
   "private": true,
@@ -28,49 +27,43 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.1.3"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@nx/devkit": "20.8.0",
-    "@nx/eslint": "20.8.0",
-    "@nx/eslint-plugin": "20.8.0",
-    "@nx/js": "20.8.0",
-    "@nx/playwright": "20.8.0",
-    "@nx/react": "20.8.0",
-    "@nx/vite": "20.8.0",
-    "@nx/web": "20.8.0",
-    "@nx/workspace": "20.8.0",
-    "@playwright/test": "^1.36.0",
-    "@swc-node/register": "^1.10.9",
-    "@swc/cli": "0.6.0",
-    "@swc/core": "^1.10.7",
+    "@eslint/js": "^9.8.0",
+    "@nx/eslint": "21.4.1",
+    "@nx/eslint-plugin": "21.4.1",
+    "@nx/js": "21.4.1",
+    "@nx/react": "21.4.1",
+    "@nx/vite": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/workspace": "21.4.1",
+    "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
+    "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.3.1",
+    "@vitest/ui": "^3.0.0",
     "cpr": "^3.0.1",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "10.1.2",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-playwright": "^2.1.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jiti": "2.4.2",
-    "jsdom": "^26.0.0",
-    "nx": "20.8.0",
-    "prettier": "^3.4.2",
-    "sass": "^1.83.4",
+    "jsdom": "~22.1.0",
+    "nx": "21.4.1",
+    "prettier": "^2.6.2",
+    "sass": "^1.55.0",
     "tslib": "^2.3.0",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
-    "vite": "6.3.2",
-    "vitest": "^1.3.1"
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.0",
+    "vitest": "^3.0.0"
   },
   "nx": {
     "includedScripts": []
