--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,34 +26,32 @@ env:
   IMAGE_NAME: ks89/${{ github.event.repository.name }}
 
 jobs:
-  build:
-    name: Build and publish
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    permissions:
-      contents: read
-      packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+      - name: Set up Node
+        uses: actions/setup-node@v5
+        node-version: 22
+      - name: Run builds
+        run: |
+          echo "Running Build dev"
+          npm run build:dev
+          echo "Running Build prod"
+          npm run build:prod
 
-#      - name: Dump GitHub context
-#        id: github_context_step
-#        run: |
-#          echo '${{ toJSON(github) }}'
-#          echo '${{ github.event.repository.name }}'
+  build-and-publish:
+    name: Build and publish
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
 
-#      # Install the cosign tool except on PR
-#      # https://github.com/sigstore/cosign-installer
-#      - name: Install cosign
-#      if: github.event_name != 'pull_request'
-#      uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
-#      with:
-#        cosign-release: 'v1.11.0'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Set up Docker Buildx
@@ -95,16 +93,3 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-#      # Sign the resulting Docker image digest except on PRs.
-#      # This will only write to the public Rekor transparency log when the Docker
-#      # repository is public to avoid leaking data.  If you would like to publish
-#      # transparency data even for private images, pass --force to cosign below.
-#      # https://github.com/sigstore/cosign
-#      - name: Sign the published Docker image
-#        if: ${{ github.event_name != 'pull_request' }}
-#        env:
-#          COSIGN_EXPERIMENTAL: "true"
-#        # This step uses the identity token to provision an ephemeral certificate
-#        # against the sigstore community Fulcio instance.
-#        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
