--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,9 +36,13 @@ jobs:
         uses: actions/checkout@v5
       - name: Set up Node
         uses: actions/setup-node@v5
-        node-version: 22
+        with:
+          node-version: 22
+          cache: 'npm'
       - name: Run builds
         run: |
+          echo "Installing deps"
+          npm ci
           echo "Running Build dev"
           npm run build:dev
           echo "Running Build prod"
