--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
       - name: Set up Node
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'npm'
