--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/material": "^6.4.0",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.2.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -31,13 +31,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/eslint": "21.4.1",
-    "@nx/eslint-plugin": "21.4.1",
-    "@nx/js": "21.4.1",
-    "@nx/react": "21.4.1",
-    "@nx/vite": "21.4.1",
-    "@nx/web": "21.4.1",
-    "@nx/workspace": "21.4.1",
+    "@nx/eslint": "21.6.6",
+    "@nx/eslint-plugin": "21.6.6",
+    "@nx/js": "21.6.6",
+    "@nx/react": "21.6.6",
+    "@nx/vite": "21.6.6",
+    "@nx/web": "21.6.6",
+    "@nx/workspace": "21.6.6",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
@@ -56,13 +56,13 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "21.4.1",
-    "prettier": "^2.6.2",
+    "nx": "21.6.6",
+    "prettier": "^3.6.2",
     "sass": "^1.55.0",
     "tslib": "^2.3.0",
-    "typescript": "~5.8.2",
+    "typescript": "5.9.3",
     "typescript-eslint": "^8.29.0",
-    "vite": "^6.0.0",
+    "vite": "7.1.9",
     "vitest": "^3.0.0"
   },
   "nx": {
