--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "@reduxjs/toolkit": "^2.2.5",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -31,22 +31,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@nx/eslint": "22.1.1",
-    "@nx/eslint-plugin": "22.1.1",
-    "@nx/js": "22.1.1",
-    "@nx/react": "22.1.1",
-    "@nx/vite": "22.1.1",
-    "@nx/web": "22.1.1",
-    "@nx/workspace": "22.1.1",
+    "@nx/eslint": "22.3.3",
+    "@nx/eslint-plugin": "22.3.3",
+    "@nx/js": "22.3.3",
+    "@nx/react": "22.3.3",
+    "@nx/vite": "22.3.3",
+    "@nx/web": "22.3.3",
+    "@nx/workspace": "22.3.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/ui": "^3.0.0",
+    "@vitest/ui": "^4.0.0",
     "cpr": "^3.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -56,16 +56,13 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "22.1.1",
-    "prettier": "^3.6.2",
+    "nx": "22.3.3",
+    "prettier": "~3.6.2",
     "sass": "^1.55.0",
     "tslib": "^2.3.0",
-    "typescript": "5.9.3",
-    "typescript-eslint": "^8.29.0",
-    "vite": "7.1.9",
-    "vitest": "^3.0.0"
-  },
-  "nx": {
-    "includedScripts": []
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
+    "vitest": "^4.0.0"
   }
 }
