--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "22.3.3",
-    "prettier": "~3.6.2",
+    "prettier": "^3.7.4",
     "sass": "^1.55.0",
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
